EXTRA_DIST = \
	README \
	install.sh \
	Serval/ant.properties \
	Serval/local.properties.in \
	Serval/project.properties \
	Serval/.classpath \
	Serval/.project \
	Serval/build.xml \
	Serval/proguard.cfg \
	Serval/AndroidManifest.xml \
	Serval/res/layout/main.xml \
	Serval/res/values/strings.xml \
	Serval/jni/Android.mk \
	Serval/jni/Application.mk \
	Serval/assets/.gitignore \
	Serval/src/org/servalarch/serval/ServalActivity.java \
	Serval/src/org/servalarch/serval/TranslatorService.java \
	ServalChat/local.properties.in \
	ServalChat/project.properties \
	ServalChat/.classpath \
	ServalChat/.project \
	ServalChat/build.xml \
	ServalChat/README \
	ServalChat/proguard.cfg \
	ServalChat/jni/Android.mk \
	ServalChat/jni/Application.mk \
	ServalChat/AndroidManifest.xml \
	ServalChat/res/layout/main.xml \
	ServalChat/res/values/strings.xml \
	ServalChat/res/drawable-hdpi/icon.png \
	ServalChat/res/drawable-ldpi/icon.png \
	ServalChat/res/drawable-mdpi/icon.png \
	ServalChat/src/org/servalarch/ServalChat/ChatActivity.java
